change Subscription struct {ID} to int and add new struct for POST swag/documantation
